--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+/* styles.css */
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f4f4f9;
@@ -119,9 +121,48 @@ footer {
     padding: 0.75rem;
     border-radius: 0.25rem;
 }
+
 .product-img {
     width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 5px 5px 0 0;
+}
+
+/* Media Queries */
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+    .navbar-brand img.logo {
+        height: 30px;
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    .navbar-brand img.logo {
+        height: 40px;
+    }
+
+    .product {
+        margin-bottom: 30px; /* Add more space between products */
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    .navbar-brand img.logo {
+        height: 50px;
+    }
+
+    .product {
+        margin-bottom: 20px; /* Adjust product margin */
+    }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+    .navbar-brand img.logo {
+        height: 60px;
+    }
 }
